# HelixDesk-AI-Agent

./: .gitignore  CHALLENGE.md  Dockerfile  README.md  _debug_expert.py  _final.txt  _runner.ps1  _table.txt  _test.txt  _test2.txt  _test3.txt  _verify.py  _verify_expert.py  app.py  baseline.py  evaluate.py  inference.py  openenv.yaml  openenv.yaml.bak  pyproject.toml  requirements.txt  results.txt  test_adjusted.py  test_all_user_logic.py  test_scores.py  test_user_snippet.py  tmp_test.py  train.py
.huggingface/tasks/: easy_classify.py  expert_full.py  hard_trend.py  medium_sla.py
helixdesk/: env.py  models.py  rewards.py
helixdesk/monitor/: episode_logger.py  terminal_dashboard.py
helixdesk/simulator/: email_gen.py
helixdesk/tasks/: easy_classify.py  expert_full.py  hard_trend.py  medium_sla.py
tasks/: __init__.py  easy_classify.py  expert_full.py  hard_trend.py  medium_sla.py
tests/: test_validation.py
