[project]
name = "helixdesk-openenv"
version = "1.0.0"
description = "HelixDesk OpenEnv for AI-powered customer support triage."
dependencies = [
    "openenv-core>=0.2.0",
    "gymnasium>=0.29.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "gradio>=4.0.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
